bugfix, avoid horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 html {
   width: 100%;
   margin: 0 auto;
-  padding: 10px;
 }
 
 body {
@@ -14,7 +13,7 @@ body {
   line-height: 1.167em;
   letter-spacing: .05ch;
   overflow-y: scroll;
-  padding-top: 50px;
+  padding: 60px 10px 10px 10px;
   overflow-x: hidden;
   background-color: #ffffff;
 }
@@ -130,11 +129,3 @@ a:active {
   padding-top: 0;
 }
 
-@media (max-width: 600px) {
-  .container-fluid {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
